@@ -222,6 +222,7 @@ public:
 	bool log_mplayer;
 	bool log_smplayer;
 	QString log_filter;
+	bool verbose_log;
 
     //mplayer log autosaving
     bool autosave_mplayer_log;
